router_macro/tests/ui/non_literal_token.rs
use leptos_router_macro::path;

const ROUTE: &str = "/foo";

fn main() {
    let _ = path!(ROUTE);
}
